--- a/style.css
+++ b/style.css
@@ -66,7 +66,8 @@ a:hover {
   color: white;
   border: 1px solid #ccc;
   background-color: rgb(96, 181, 204);
-  margin-left: 12px
+  margin-left: 12px;
+  margin-bottom: 18px;
 }
 
 .search-button:hover {
@@ -151,6 +152,8 @@ button:focus, input:focus {
 th {
   text-align: left;
   cursor: pointer;
+  padding-bottom: 12px;
+
 }
 
 th:hover {
@@ -160,4 +163,5 @@ th:hover {
 th, td {
   font-size: 18px;
   padding-right: 20px;
+
 }
